--- a/frontend/src/components/project-carousel-page/ProjectParallaxCarousel.module.scss
+++ b/frontend/src/components/project-carousel-page/ProjectParallaxCarousel.module.scss
@@ -80,15 +80,15 @@
   }
 
   .bb-slide-wrapper {
-    // visibility: hidden;
-    &:nth-child(3n-1) {
-      background-color: rgba(23, 200, 35, 0.1);
-    }
-    &:nth-child(3n-2) {
-      background-color: rgba(23, 65, 200, 0.1);
-    }
-    &:nth-child(3n-3) {
-      background-color: rgba(243, 65, 0, 0.1);
-    }
+    visibility: hidden;
+    // &:nth-child(3n-1) {
+    //   background-color: rgba(23, 200, 35, 0.1);
+    // }
+    // &:nth-child(3n-2) {
+    //   background-color: rgba(23, 65, 200, 0.1);
+    // }
+    // &:nth-child(3n-3) {
+    //   background-color: rgba(243, 65, 0, 0.1);
+    // }
   }
 }
